--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ body {
   text-align: center;
   padding: 50px;
   background-color: #ffffff;
-  background-image: url(marble.jpg);
+  background-image: url("https://communitycreationxx.github.io/glowupgalleryblog/marble.jpg");
 }
 
 .content {
